2011-05-25  Dan Horák <dan@danny.cz>

	* src/bridge.py (BridgeConfiguration._add_defaults)
	(BridgeConfiguration._read_configuration)
	* src/client.py (ClientConfiguration._add_defaults)
	(ClientConfiguration._read_configuration): Handle koji-config.
	* src/utils.py (koji_read_config): New parameter koji_config.  All users
	updated.
	* config/bridge.conf (koji-config)
	* config/client.conf (koji-config): Add option examples.

2011-05-24  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (main): Add FIXME.

	* src/bridge.py (SignRPMRequestType.forward_request_payload)
	(SignRPMsSendRequestThread.__handle_one_rpm): Tell the user what has
	happened on URLGrabError and what the failing URL was.

2011-05-23  Miloslav Trmač  <mitr@redhat.com>

	* doc/sigul.1.in (sign-rpm): Document --v3-signature.
	(sign-rpms): Document command.

	* tests/basic.at (get-public-key, delete-key, change-passphrase)
	(sign-text, sign-data, sign-rpm): Run the client in verbose mode when
	possible.

	* src/client.py (handle_global_options): New option --user-name.
	* doc/sigul.1.in: Document --user-name.
	* tests/basic.at (new-user, sign-text): Use --user-name to test user
	authentication and key access granting behavior.

	* tests/new-key-substitute.asc: New file.
	* tests/basic.at (new-key): Allow skipping the new-key test if
	$SIGUL_SUBSTITUTE_NEW_KEY is set.

	* src/client.py (cmd_import_key): Fix help synopsis, improve command
	description.

	* tests/basic.at (new-key): Stop sending a superfluous password.

	* doc/sign-many.py (sign_rpm): Split from main.
	(sign_rpms): New function.
	(main): Demonstrate using sign_rpm or sign_rpms.

2011-05-19  Miloslav Trmač  <mitr@redhat.com>

	* src/server_add_admin.py (main)
	* src/server_common.py (db_open)
	* src/server.py (cmd_new_user, cmd_new_key, cmd_import_key)
	(cmd_grant_key_access): Port to sqlalchemy 0.5.

	* tests/basic.at
	* tests/imported-public-key.asc
	* tests/imported-secret-key.asc
	* tests/testrpm.spec